src/test/ui/type-alias-impl-trait/issue-60564.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-60564.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: non-defining opaque type use in defining scope
  --> $DIR/issue-60564.rs:22:34
   |
LL |     fn iter_bits(self, n: u8) -> Self::BitsIter {
   |                                  ^^^^^^^^^^^^^^
   |
note: used non-generic type `u8` for generic parameter
  --> $DIR/issue-60564.rs:11:25
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   |                         ^

error: aborting due to previous error; 1 warning emitted

